--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,25 +1,9 @@
-yangshun:
-  name: Yangshun Tay
-  title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
-  url: https://linkedin.com/in/yangshun
-  image_url: https://github.com/yangshun.png
+brigitte:
+  name: Brigitte Böhm
+  title: Cloud & Data Platform Engineer
+  url: https://www.linkedin.com/in/brigitte-boehm-34b7a025
+  image_url: https://github.com/bri-b-dev.png
   page: true
   socials:
-    x: yangshunz
-    linkedin: yangshun
-    github: yangshun
-    newsletter: https://www.greatfrontend.com
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+    github: bri-b-dev
+    linkedin: https://www.linkedin.com/in/brigitte-boehm-34b7a025
